--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,3 +8,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
+rand = "0.9.0-alpha.1"
