--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-20.04
     name: Release Web
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Download Web build
         uses: dawidd6/action-download-artifact@v6
         with:
