--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,14 @@ jobs:
           workflow: build.yaml
           name: wasm32
           path: wasm32
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@releases/v4
+      - name: Add Cloudflare Pages files
+        run: |
+          cp deploy/cloudflare-pages/* wasm32/
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
         with:
-          folder: wasm32
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: 6432b4c79e4c3f1ca4faa14da0b6ae79
+          projectName: blocks-plus-plus
+          directory: wasm32
+          wranglerVersion: '3'
