--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,14 +4,13 @@ on: push
 
 env:
   CARGO_TERM_COLOR: always
-  EMSCRIPTEN_VERSION: 3.1.39
   GODOT_VERSION: 4.2.2
   GODOT_PROJECT_PATH: godot
 
 jobs:
   lint-rust:
     name: Lint Rust
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,27 +34,27 @@ jobs:
       matrix:
         platform:
           - build_for: linux-x86_64
-            os: ubuntu-20.04
+            os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             bin: libblocks_plus_plus.so
 
           - build_for: wasm32
-            os: ubuntu-20.04
+            os: ubuntu-22.04
             target: wasm32-unknown-emscripten
             bin: blocks_plus_plus.wasm
 
           - build_for: windows-x86_64
-            os: windows-latest
+            os: windows-2022
             target: x86_64-pc-windows-msvc
             bin: blocks_plus_plus.dll
 
           - build_for: macos-x86_64
-            os: macOS-latest
+            os: macos-14
             target: x86_64-apple-darwin
             bin: libblocks_plus_plus.dylib
 
           - build_for: macos-aarch64
-            os: macOS-latest
+            os: macos-14
             target: aarch64-apple-darwin
             bin: libblocks_plus_plus.dylib
 
@@ -66,12 +65,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Emscripten
         if: contains(matrix.platform.target, 'wasm')
-        run: |
-          git clone https://github.com/emscripten-core/emsdk.git
-          cd emsdk
-          ./emsdk install ${EMSCRIPTEN_VERSION}
-          ./emsdk activate ${EMSCRIPTEN_VERSION}
-          source ./emsdk_env.sh
+        uses: mymindstorm/setup-emsdk@v14
+        with:
+          version: 3.1.39
+          actions-cache-folder: 'emsdk-cache'
       - name: Cache
         uses: Swatinem/rust-cache@v2
         with:
@@ -128,7 +125,7 @@ jobs:
           #   bin: libblocks_plus_plus.dylib
     
     needs: [lint-rust, build-rust]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     name: Build Godot ${{ matrix.platform.export }}
     container:
       image: barichello/godot-ci:4.2.2
@@ -147,7 +144,7 @@ jobs:
         with:
           name: linux-x86_64_libblocks_plus_plus.so
           path: rust/target/x86_64-unknown-linux-gnu/debug/
-      - name: Setup
+      - name: Setup  # TODO install godot at correct version, and pull export templates from artifacts
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
@@ -163,7 +160,7 @@ jobs:
           path: build/${{ matrix.platform.build_for }}
   
   publish-web:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     environment: main
     name: Publish Web
     needs: [build-godot]
