--- a/.github/workflows/compile_godot.yaml
+++ b/.github/workflows/compile_godot.yaml
@@ -7,8 +7,13 @@ on:
 
 
 env:
+  EMSCRIPTEN_VERSION: 3.1.39
+  GODOT_VERSION: 4.2.2
   VULKAN_SDK_VERSION: 1.3.290.0
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   compile-web:
@@ -21,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: 4.2.2-stable
+          ref: ${{env.GODOT_VERSION}}-stable
           path: godot_sources
 
       - name: Install Scons
@@ -31,7 +36,7 @@ jobs:
       - name: Install Emscripten
         uses: mymindstorm/setup-emsdk@v14
         with:
-          version: 3.1.39
+          version: ${{env.EMSCRIPTEN_VERSION}}
           actions-cache-folder: 'emsdk-cache'
         
       - name: Build template
@@ -62,7 +67,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: 4.2.2-stable
+          ref: ${{env.GODOT_VERSION}}-stable
           path: godot_sources
 
       - name: Install Linux dependencies
@@ -98,7 +103,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: 4.2.2-stable
+          ref: ${{env.GODOT_VERSION}}-stable
           path: godot_sources
         
       - name: Install Scons
@@ -137,7 +142,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: 4.2.2-stable
+          ref: ${{env.GODOT_VERSION}}-stable
           path: godot_sources
         
       - name: Install macos dependencies
@@ -194,5 +199,5 @@ jobs:
       - name: Upload export templates
         uses: actions/upload-artifact@v4
         with:
-          name: templates_4.2.2
+          name: templates_${{env.GODOT_VERSION}}
           path: templates
