--- a/.github/workflows/compile_godot.yaml
+++ b/.github/workflows/compile_godot.yaml
@@ -1,15 +1,31 @@
 name: compile_godot
 
-on:
-  push  #:
-    # paths:
-    #   - deploy/godot/*
+# inspired by:
+# - https://github.com/godotengine/godot/tree/master/.github,
+# - https://github.com/bruvzg/gdsdecomp/blob/master/.github.
+# Also see https://docs.godotengine.org/en/latest/contributing/development/compiling/index.html.
 
+# The action runtimes should be (+- ~20%):
+# No cache:
+# - web: 35 minutes
+# - linuxbsd: 25 minutes
+# - windows: 35 minutes
+# - macos: 25 minutes
+# The github action minute cost is around (35+25) + 35*2 + 25*10 = 380 minutes per run
+# See https://docs.github.com/en/billing/managing-billing-for-github-actions/about-billing-for-github-actions
+
+on:
+  push:
+    paths:
+      - deploy/godot/*
+      - .github/workflows/compile_godot.yaml
 
 env:
   EMSCRIPTEN_VERSION: 3.1.39
   GODOT_VERSION: 4.2.2
   VULKAN_SDK_VERSION: 1.3.290.0
+  SCONS_CACHE: "${{ github.workspace }}/.scons-cache/"
+  SCONS_CACHE_LIMIT: 7168  # See https://github.com/godotengine/godot/blob/4.2/.github/actions/godot-build/action.yml
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -36,20 +52,26 @@ jobs:
       - name: Install Emscripten
         uses: mymindstorm/setup-emsdk@v14
         with:
-          version: ${{env.EMSCRIPTEN_VERSION}}
+          version: ${{ env.EMSCRIPTEN_VERSION }}
           actions-cache-folder: 'emsdk-cache'
         
-      - name: Build template
+      - name: Cache Godot compile
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.SCONS_CACHE }}
+          key: web-${{ env.GODOT_VERSION }}
+      - name: Compile template
         run: |
-          cp deploy/godot/custom.py godot_sources
           cd godot_sources
 
-          scons platform=web target=template_release
-          scons platform=web target=template_debug
+          rm -r editor  # Make sure we don't accidentally build editor stuff
+          scons platform=web target=template_release profile=../deploy/godot/release_custom.py
+          scons platform=web target=template_debug profile=../deploy/godot/debug_custom.py
 
           mv bin/godot.web.template_release.wasm32.dlink.zip bin/web_dlink_release.zip
           mv bin/godot.web.template_debug.wasm32.dlink.zip bin/web_dlink_debug.zip
-      - name: Upload
+      
+      - name: Upload templates
         uses: actions/upload-artifact@v4
         with:
           name: export_web
@@ -75,17 +97,23 @@ jobs:
         with:
           packages: build-essential scons pkg-config libx11-dev libxcursor-dev libxinerama-dev libgl1-mesa-dev libglu1-mesa-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev
         
-      - name: Build template
+      - name: Cache Godot compile
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.SCONS_CACHE }}
+          key: linux-${{ env.GODOT_VERSION }}
+      - name: Compile templates
         run: |
-          cp deploy/godot/custom.py godot_sources
           cd godot_sources
 
-          scons platform=linuxbsd target=template_release arch=x86_64
-          scons platform=linuxbsd target=template_debug arch=x86_64
+          rm -r editor  # Make sure we don't accidentally build editor stuff
+          scons platform=linuxbsd target=template_release profile=../deploy/godot/release_custom.py arch=x86_64
+          scons platform=linuxbsd target=template_debug profile=../deploy/godot/debug_custom.py arch=x86_64
 
           mv bin/godot.linuxbsd.template_release.x86_64 bin/linux_release.x86_64
           mv bin/godot.linuxbsd.template_debug.x86_64 bin/linux_debug.x86_64
-      - name: Upload
+
+      - name: Upload templates
         uses: actions/upload-artifact@v4
         with:
           name: export_linuxbsd
@@ -110,18 +138,24 @@ jobs:
         run: |
           python -m pip install scons
         
-      - name: Build template
+      - name: Cache Godot compile
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.SCONS_CACHE }}
+          key: windows-${{ env.GODOT_VERSION }}
+      - name: Compile templates
         run: |
-          cp deploy/godot/custom.py godot_sources
           cd godot_sources
 
-          scons platform=windows target=template_release arch=x86_64
-          scons platform=windows target=template_debug arch=x86_64
+          rm -r editor  # Make sure we don't accidentally build editor stuff
+          scons platform=windows target=template_release profile=../deploy/godot/release_custom.py arch=x86_64
+          scons platform=windows target=template_debug profile=../deploy/godot/debug_custom.py arch=x86_64
 
           mv bin/godot.windows.template_release.x86_64.exe bin/windows_release_x86_64.exe
           mv bin/godot.windows.template_release.x86_64.console.exe bin/windows_release_x86_64_console.exe
           mv bin/godot.windows.template_debug.x86_64.exe bin/windows_debug_x86_64.exe
           mv bin/godot.windows.template_debug.x86_64.console.exe bin/windows_debug_x86_64_console.exe
+      
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
@@ -150,7 +184,7 @@ jobs:
           brew install scons
           
           # shamelessly copied from https://github.com/bruvzg/gdsdecomp/blob/master/.github/actions/install-swiftshader/action.yml
-          wget "https://sdk.lunarg.com/sdk/download/${VULKAN_SDK_VERSION}/mac/vulkansdk-macos-${VULKAN_SDK_VERSION}.dmg?Human=true" -O vulkansdk.dmg
+          wget --no-verbose "https://sdk.lunarg.com/sdk/download/${VULKAN_SDK_VERSION}/mac/vulkansdk-macos-${VULKAN_SDK_VERSION}.dmg?Human=true" -O vulkansdk.dmg
           hdiutil attach vulkansdk.dmg
           sudo /Volumes/vulkansdk-macos-${VULKAN_SDK_VERSION}/InstallVulkan.app/Contents/MacOS/InstallVulkan --root $GITHUB_WORKSPACE/vulkansdk-macos-${VULKAN_SDK_VERSION} --accept-licenses --default-answer --confirm-command install
           hdiutil detach /Volumes/vulkansdk-macos-${VULKAN_SDK_VERSION}
@@ -160,15 +194,20 @@ jobs:
           echo "DYLD_LIBRARY_PATH=$VULKAN_SDK/lib:$DYLD_LIBRARY_PATH" >> $GITHUB_ENV
           echo "PATH=$VULKAN_SDK/bin:$PATH" >> $GITHUB_ENV
         
-      - name: Build template
+      - name: Cache Godot compile
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.SCONS_CACHE }}
+          key: macos-${{ env.GODOT_VERSION }}
+      - name: Compile template
         run: |
-          cp deploy/godot/custom.py godot_sources
           cd godot_sources
 
-          scons platform=macos target=template_release arch=x86_64 vulkan_sdk_path=$GITHUB_WORKSPACE/vulkansdk-macos-${VULKAN_SDK_VERSION}
-          scons platform=macos target=template_debug arch=x86_64 vulkan_sdk_path=$GITHUB_WORKSPACE/vulkansdk-macos-${VULKAN_SDK_VERSION}
-          scons platform=macos target=template_release arch=arm64 vulkan_sdk_path=$GITHUB_WORKSPACE/vulkansdk-macos-${VULKAN_SDK_VERSION}
-          scons platform=macos target=template_debug arch=arm64 vulkan_sdk_path=$GITHUB_WORKSPACE/vulkansdk-macos-${VULKAN_SDK_VERSION}
+          rm -r editor  # Make sure we don't accidentally build editor stuff
+          scons platform=macos target=template_release profile=../deploy/godot/release_custom.py arch=x86_64 vulkan_sdk_path=$VULKAN_SDK_PATH
+          scons platform=macos target=template_debug profile=../deploy/godot/debug_custom.py arch=x86_64 vulkan_sdk_path=$VULKAN_SDK_PATH
+          scons platform=macos target=template_release profile=../deploy/godot/release_custom.py arch=arm64 vulkan_sdk_path=$VULKAN_SDK_PATH
+          scons platform=macos target=template_debug profile=../deploy/godot/debug_custom.py arch=arm64 vulkan_sdk_path=$VULKAN_SDK_PATH
 
           lipo -create bin/godot.macos.template_release.x86_64 bin/godot.macos.template_release.arm64 -output bin/godot.macos.template_release.universal
           lipo -create bin/godot.macos.template_debug.x86_64 bin/godot.macos.template_debug.arm64 -output bin/godot.macos.template_debug.universal
@@ -180,7 +219,8 @@ jobs:
           chmod +x macos_template.app/Contents/MacOS/godot_macos*
 
           zip -q -9 -r macos.zip macos_template.app
-      - name: Upload
+      
+      - name: Upload template
         uses: actions/upload-artifact@v4
         with:
           name: export_macos
