--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -95,7 +95,7 @@ jobs:
           path: rust/target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }}
   
   build-godot:
-    # Based on https://github.com/abarichello/godot-ci
+    # Inspired by https://github.com/abarichello/godot-ci
     strategy:
       fail-fast: false
       matrix:
@@ -181,7 +181,6 @@ jobs:
     environment: main
     name: Publish Web
     needs: [build-godot]
-    if: github.ref_name == 'main'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
