--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -180,7 +180,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build_type: [release, debug]
+        build_type: [release]  # debug blocks_plus_plus.wasm is 62.4 MiB and I'm not uploading more stuff to R2
     
     runs-on: ubuntu-22.04
     environment: main
@@ -198,13 +198,12 @@ jobs:
         run: |
           cp deploy/cloudflare-pages/* wasm32/
           # exclude the engine file from cloudflare pages because it's too big
-          engine_hash=($(sha256sum wasm32/index.side.wasm))
+          export engine_hash=($(sha256sum wasm32/index.side.wasm))
           rm wasm32/index.side.wasm
           # ugly hack to force godot to pull the engine from another domain
-          build_type=${{ matrix.build_type }}
-          sed -i "s/{{{DIR}}}/${build_type}_${GODOT_VERSION}_${engine_hash[1]}/" deploy/templates/readAsyncNew
-          sed -e '/readAsync = (url, onload, onerror) => {/{r readAsyncNew' -e 'd;}' wasm32/index.js > _index.js
-          mv _index.js wasm32/index.js
+          export build_type=${{ matrix.build_type }}
+          sed -i -e "s|{{{DIR}}}|${build_type}_${GODOT_VERSION}_${engine_hash[0]}|g" deploy/templates/readAsyncNew
+          sed -i -e '/readAsync = (url, onload, onerror) => {/{r deploy/templates/readAsyncNew' -e 'd;}' wasm32/index.js
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
