--- a/.github/workflows/compile_godot.yaml
+++ b/.github/workflows/compile_godot.yaml
@@ -27,7 +27,8 @@ on:
 
 env:
   EMSCRIPTEN_VERSION: 3.1.39
-  GODOT_VERSION: 4.2.2
+  GODOT_VERSION: 4.3.0
+  GODOT_BRANCH: 4.3
   VULKAN_SDK_VERSION: 1.3.290.0
   SCONS_CACHE: "${{ github.workspace }}/.scons-cache/"
   SCONS_CACHE_LIMIT: 7168  # See https://github.com/godotengine/godot/blob/4.2/.github/actions/godot-build/action.yml
@@ -47,7 +48,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: ${{env.GODOT_VERSION}}-stable
+          ref: ${{env.GODOT_BRANCH}}
           path: godot_sources
 
       - name: Install Scons
@@ -94,7 +95,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: ${{env.GODOT_VERSION}}-stable
+          ref: ${{env.GODOT_BRANCH}}
           path: godot_sources
 
       - name: Install Linux dependencies
@@ -136,7 +137,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: ${{env.GODOT_VERSION}}-stable
+          ref: ${{env.GODOT_BRANCH}}
           path: godot_sources
         
       - name: Install Scons
@@ -181,7 +182,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: godotengine/godot
-          ref: ${{env.GODOT_VERSION}}-stable
+          ref: ${{env.GODOT_BRANCH}}
           path: godot_sources
         
       - name: Install macos dependencies
