--- a/.github/workflows/compile_godot.yaml
+++ b/.github/workflows/compile_godot.yaml
@@ -28,7 +28,7 @@ on:
 env:
   EMSCRIPTEN_VERSION: 3.1.64
   GODOT_VERSION: 4.3.0
-  GODOT_BRANCH: 4.3
+  GODOT_BRANCH: 4.3-stable
   VULKAN_SDK_VERSION: 1.3.290.0
   SCONS_CACHE: "${{ github.workspace }}/.scons-cache/"
   SCONS_CACHE_LIMIT: 7168  # See https://github.com/godotengine/godot/blob/4.2/.github/actions/godot-build/action.yml
